chore: add thumbnail to media table (#15)
* chore: add thumbnail to media table

* chore: get thumbnail url from metadata search

* feat: get cover image from epub

* feat: endpoint to get the media cover

* feat: show image in frontend
