# crates/shiori_database/src/schema.rs
@@ -79,6 +79,12 @@ diesel::table! {
         ///
         /// (Automatically generated by Diesel.)
         library_id -> Int4,
+        /// The `cover_path` column of the `media` table.
+        ///
+        /// Its SQL type is `Nullable<Text>`.
+        ///
+        /// (Automatically generated by Diesel.)
+        cover_path -> Nullable<Text>,
     }
 }
 
